project/antlr/subCParser.cpp

// Generated from C:/Users/Gheorghe/Desktop/COMP/project/antlr\subC.g4 by ANTLR 4.7


#include "subCVisitor.h"

#include "subCParser.h"


using namespace antlrcpp;
using namespace antlr4;

subCParser::subCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

subCParser::~subCParser() {
  delete _interpreter;
}

std::string subCParser::getGrammarFileName() const {
  return "subC.g4";
}

const std::vector<std::string>& subCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& subCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

subCParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<subCParser::DeclarationContext *> subCParser::ProgContext::declaration() {
  return getRuleContexts<subCParser::DeclarationContext>();
}

subCParser::DeclarationContext* subCParser::ProgContext::declaration(size_t i) {
  return getRuleContext<subCParser::DeclarationContext>(i);
}


size_t subCParser::ProgContext::getRuleIndex() const {
  return subCParser::RuleProg;
}

antlrcpp::Any subCParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

subCParser::ProgContext* subCParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, subCParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << subCParser::CHAR)
      | (1ULL << subCParser::INT32)
      | (1ULL << subCParser::INT64)
      | (1ULL << subCParser::VOID))) != 0)) {
      setState(62);
      declaration();
      setState(67);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

subCParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t subCParser::DeclarationContext::getRuleIndex() const {
  return subCParser::RuleDeclaration;
}

void subCParser::DeclarationContext::copyFrom(DeclarationContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FunctionDefContext ------------------------------------------------------------------

subCParser::DefFunContext* subCParser::FunctionDefContext::defFun() {
  return getRuleContext<subCParser::DefFunContext>(0);
}

subCParser::FunctionDefContext::FunctionDefContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::FunctionDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitFunctionDef(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableDecContext ------------------------------------------------------------------

subCParser::DecVariableContext* subCParser::VariableDecContext::decVariable() {
  return getRuleContext<subCParser::DecVariableContext>(0);
}

subCParser::VariableDecContext::VariableDecContext(DeclarationContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::VariableDecContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVariableDec(this);
  else
    return visitor->visitChildren(this);
}
subCParser::DeclarationContext* subCParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, subCParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<subCParser::FunctionDefContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(68);
      defFun();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclarationContext *>(_tracker.createInstance<subCParser::VariableDecContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(69);
      decVariable();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

subCParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t subCParser::TypeContext::getRuleIndex() const {
  return subCParser::RuleType;
}

void subCParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VoidContext ------------------------------------------------------------------

tree::TerminalNode* subCParser::VoidContext::VOID() {
  return getToken(subCParser::VOID, 0);
}

subCParser::VoidContext::VoidContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::VoidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVoid(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Int32Context ------------------------------------------------------------------

tree::TerminalNode* subCParser::Int32Context::INT32() {
  return getToken(subCParser::INT32, 0);
}

subCParser::Int32Context::Int32Context(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::Int32Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitInt32(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Int64Context ------------------------------------------------------------------

tree::TerminalNode* subCParser::Int64Context::INT64() {
  return getToken(subCParser::INT64, 0);
}

subCParser::Int64Context::Int64Context(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::Int64Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitInt64(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CharContext ------------------------------------------------------------------

tree::TerminalNode* subCParser::CharContext::CHAR() {
  return getToken(subCParser::CHAR, 0);
}

subCParser::CharContext::CharContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::CharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitChar(this);
  else
    return visitor->visitChildren(this);
}
subCParser::TypeContext* subCParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, subCParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case subCParser::CHAR: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<subCParser::CharContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(72);
        match(subCParser::CHAR);
        break;
      }

      case subCParser::INT32: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<subCParser::Int32Context>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(73);
        match(subCParser::INT32);
        break;
      }

      case subCParser::INT64: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<subCParser::Int64Context>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(74);
        match(subCParser::INT64);
        break;
      }

      case subCParser::VOID: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<subCParser::VoidContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(75);
        match(subCParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_exprContext ------------------------------------------------------------------

subCParser::Const_exprContext::Const_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* subCParser::Const_exprContext::NUMERICV() {
  return getToken(subCParser::NUMERICV, 0);
}

tree::TerminalNode* subCParser::Const_exprContext::CHARV() {
  return getToken(subCParser::CHARV, 0);
}


size_t subCParser::Const_exprContext::getRuleIndex() const {
  return subCParser::RuleConst_expr;
}

antlrcpp::Any subCParser::Const_exprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitConst_expr(this);
  else
    return visitor->visitChildren(this);
}

subCParser::Const_exprContext* subCParser::const_expr() {
  Const_exprContext *_localctx = _tracker.createInstance<Const_exprContext>(_ctx, getState());
  enterRule(_localctx, 6, subCParser::RuleConst_expr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    _la = _input->LA(1);
    if (!(_la == subCParser::CHARV

    || _la == subCParser::NUMERICV)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecVariableContext ------------------------------------------------------------------

subCParser::DecVariableContext::DecVariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

subCParser::TypeContext* subCParser::DecVariableContext::type() {
  return getRuleContext<subCParser::TypeContext>(0);
}

std::vector<subCParser::VarContext *> subCParser::DecVariableContext::var() {
  return getRuleContexts<subCParser::VarContext>();
}

subCParser::VarContext* subCParser::DecVariableContext::var(size_t i) {
  return getRuleContext<subCParser::VarContext>(i);
}


size_t subCParser::DecVariableContext::getRuleIndex() const {
  return subCParser::RuleDecVariable;
}

antlrcpp::Any subCParser::DecVariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitDecVariable(this);
  else
    return visitor->visitChildren(this);
}

subCParser::DecVariableContext* subCParser::decVariable() {
  DecVariableContext *_localctx = _tracker.createInstance<DecVariableContext>(_ctx, getState());
  enterRule(_localctx, 8, subCParser::RuleDecVariable);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    type();
    setState(81);
    var();
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == subCParser::T__0) {
      setState(82);
      match(subCParser::T__0);
      setState(83);
      var();
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(subCParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarContext ------------------------------------------------------------------

subCParser::VarContext::VarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t subCParser::VarContext::getRuleIndex() const {
  return subCParser::RuleVar;
}

void subCParser::VarContext::copyFrom(VarContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Var_tableContext ------------------------------------------------------------------

tree::TerminalNode* subCParser::Var_tableContext::NAME() {
  return getToken(subCParser::NAME, 0);
}

subCParser::ScalarInitContext* subCParser::Var_tableContext::scalarInit() {
  return getRuleContext<subCParser::ScalarInitContext>(0);
}

subCParser::Var_tableContext::Var_tableContext(VarContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::Var_tableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVar_table(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Var_table_sizeContext ------------------------------------------------------------------

tree::TerminalNode* subCParser::Var_table_sizeContext::NAME() {
  return getToken(subCParser::NAME, 0);
}

subCParser::AssignmentExpressionContext* subCParser::Var_table_sizeContext::assignmentExpression() {
  return getRuleContext<subCParser::AssignmentExpressionContext>(0);
}

subCParser::ScalarInitContext* subCParser::Var_table_sizeContext::scalarInit() {
  return getRuleContext<subCParser::ScalarInitContext>(0);
}

subCParser::Var_table_sizeContext::Var_table_sizeContext(VarContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::Var_table_sizeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVar_table_size(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Var_simpleContext ------------------------------------------------------------------

tree::TerminalNode* subCParser::Var_simpleContext::NAME() {
  return getToken(subCParser::NAME, 0);
}

subCParser::VarInitContext* subCParser::Var_simpleContext::varInit() {
  return getRuleContext<subCParser::VarInitContext>(0);
}

subCParser::Var_simpleContext::Var_simpleContext(VarContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::Var_simpleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVar_simple(this);
  else
    return visitor->visitChildren(this);
}
subCParser::VarContext* subCParser::var() {
  VarContext *_localctx = _tracker.createInstance<VarContext>(_ctx, getState());
  enterRule(_localctx, 10, subCParser::RuleVar);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarContext *>(_tracker.createInstance<subCParser::Var_simpleContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(91);
      match(subCParser::NAME);
      setState(94);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == subCParser::T__2) {
        setState(92);
        match(subCParser::T__2);
        setState(93);
        varInit();
      }
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarContext *>(_tracker.createInstance<subCParser::Var_table_sizeContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(96);
      match(subCParser::NAME);
      setState(97);
      match(subCParser::T__3);
      setState(98);
      assignmentExpression();
      setState(99);
      match(subCParser::T__4);
      setState(102);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == subCParser::T__2) {
        setState(100);
        match(subCParser::T__2);
        setState(101);
        scalarInit();
      }
      break;
    }

    case 3: {
      _localctx = dynamic_cast<VarContext *>(_tracker.createInstance<subCParser::Var_tableContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(104);
      match(subCParser::NAME);
      setState(105);
      match(subCParser::T__3);
      setState(106);
      match(subCParser::T__4);

      setState(107);
      match(subCParser::T__2);
      setState(108);
      scalarInit();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarInitContext ------------------------------------------------------------------

subCParser::VarInitContext::VarInitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t subCParser::VarInitContext::getRuleIndex() const {
  return subCParser::RuleVarInit;
}

void subCParser::VarInitContext::copyFrom(VarInitContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- VarInit2Context ------------------------------------------------------------------

subCParser::ScalarInitContext* subCParser::VarInit2Context::scalarInit() {
  return getRuleContext<subCParser::ScalarInitContext>(0);
}

subCParser::VarInit2Context::VarInit2Context(VarInitContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::VarInit2Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVarInit2(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarInit1Context ------------------------------------------------------------------

subCParser::AssignmentExpressionContext* subCParser::VarInit1Context::assignmentExpression() {
  return getRuleContext<subCParser::AssignmentExpressionContext>(0);
}

subCParser::VarInit1Context::VarInit1Context(VarInitContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::VarInit1Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitVarInit1(this);
  else
    return visitor->visitChildren(this);
}
subCParser::VarInitContext* subCParser::varInit() {
  VarInitContext *_localctx = _tracker.createInstance<VarInitContext>(_ctx, getState());
  enterRule(_localctx, 12, subCParser::RuleVarInit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(113);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case subCParser::T__7:
      case subCParser::T__9:
      case subCParser::T__10:
      case subCParser::T__11:
      case subCParser::T__12:
      case subCParser::T__13:
      case subCParser::T__14:
      case subCParser::CHARV:
      case subCParser::NUMERICV:
      case subCParser::NAME: {
        _localctx = dynamic_cast<VarInitContext *>(_tracker.createInstance<subCParser::VarInit1Context>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(111);
        assignmentExpression();
        break;
      }

      case subCParser::T__5: {
        _localctx = dynamic_cast<VarInitContext *>(_tracker.createInstance<subCParser::VarInit2Context>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(112);
        scalarInit();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScalarInitContext ------------------------------------------------------------------

subCParser::ScalarInitContext::ScalarInitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<subCParser::AssignmentExpressionContext *> subCParser::ScalarInitContext::assignmentExpression() {
  return getRuleContexts<subCParser::AssignmentExpressionContext>();
}

subCParser::AssignmentExpressionContext* subCParser::ScalarInitContext::assignmentExpression(size_t i) {
  return getRuleContext<subCParser::AssignmentExpressionContext>(i);
}


size_t subCParser::ScalarInitContext::getRuleIndex() const {
  return subCParser::RuleScalarInit;
}

antlrcpp::Any subCParser::ScalarInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitScalarInit(this);
  else
    return visitor->visitChildren(this);
}

subCParser::ScalarInitContext* subCParser::scalarInit() {
  ScalarInitContext *_localctx = _tracker.createInstance<ScalarInitContext>(_ctx, getState());
  enterRule(_localctx, 14, subCParser::RuleScalarInit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(subCParser::T__5);
    setState(116);
    assignmentExpression();
    setState(121);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == subCParser::T__0) {
      setState(117);
      match(subCParser::T__0);
      setState(118);
      assignmentExpression();
      setState(123);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(124);
    match(subCParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefFunContext ------------------------------------------------------------------

subCParser::DefFunContext::DefFunContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t subCParser::DefFunContext::getRuleIndex() const {
  return subCParser::RuleDefFun;
}

void subCParser::DefFunContext::copyFrom(DefFunContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DefFun_no_paramContext ------------------------------------------------------------------

subCParser::TypeContext* subCParser::DefFun_no_paramContext::type() {
  return getRuleContext<subCParser::TypeContext>(0);
}

tree::TerminalNode* subCParser::DefFun_no_paramContext::NAME() {
  return getToken(subCParser::NAME, 0);
}

subCParser::BlocContext* subCParser::DefFun_no_paramContext::bloc() {
  return getRuleContext<subCParser::BlocContext>(0);
}

tree::TerminalNode* subCParser::DefFun_no_paramContext::VOID() {
  return getToken(subCParser::VOID, 0);
}

subCParser::DefFun_no_paramContext::DefFun_no_paramContext(DefFunContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::DefFun_no_paramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitDefFun_no_param(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DefFun_paramContext ------------------------------------------------------------------

subCParser::TypeContext* subCParser::DefFun_paramContext::type() {
  return getRuleContext<subCParser::TypeContext>(0);
}

tree::TerminalNode* subCParser::DefFun_paramContext::NAME() {
  return getToken(subCParser::NAME, 0);
}

subCParser::ListeparamContext* subCParser::DefFun_paramContext::listeparam() {
  return getRuleContext<subCParser::ListeparamContext>(0);
}

subCParser::BlocContext* subCParser::DefFun_paramContext::bloc() {
  return getRuleContext<subCParser::BlocContext>(0);
}

subCParser::DefFun_paramContext::DefFun_paramContext(DefFunContext *ctx) { copyFrom(ctx); }

antlrcpp::Any subCParser::DefFun_paramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitDefFun_param(this);
  else
    return visitor->visitChildren(this);
}
subCParser::DefFunContext* subCParser::defFun() {
  DefFunContext *_localctx = _tracker.createInstance<DefFunContext>(_ctx, getState());
  enterRule(_localctx, 16, subCParser::RuleDefFun);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DefFunContext *>(_tracker.createInstance<subCParser::DefFun_paramContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(126);
      type();
      setState(127);
      match(subCParser::NAME);
      setState(128);
      match(subCParser::T__7);
      setState(129);
      listeparam();
      setState(130);
      match(subCParser::T__8);
      setState(131);
      bloc();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DefFunContext *>(_tracker.createInstance<subCParser::DefFun_no_paramContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(133);
      type();
      setState(134);
      match(subCParser::NAME);
      setState(135);
      match(subCParser::T__7);
      setState(137);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == subCParser::VOID) {
        setState(136);
        match(subCParser::VOID);
      }
      setState(139);
      match(subCParser::T__8);
      setState(140);
      bloc();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListeparamContext ------------------------------------------------------------------

subCParser::ListeparamContext::ListeparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<subCParser::ParamContext *> subCParser::ListeparamContext::param() {
  return getRuleContexts<subCParser::ParamContext>();
}

subCParser::ParamContext* subCParser::ListeparamContext::param(size_t i) {
  return getRuleContext<subCParser::ParamContext>(i);
}


size_t subCParser::ListeparamContext::getRuleIndex() const {
  return subCParser::RuleListeparam;
}

antlrcpp::Any subCParser::ListeparamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<subCVisitor*>(visitor))
    return parserVisitor->visitListeparam(this);
  else
    return visitor->visitChildren(this);
}

subCParser::ListeparamContext* subCParser::listeparam() {
  ListeparamContext *_localctx = _tracker.createInstance<ListeparamContext>(_ctx, getState());
  enterRule(_localctx, 18, subCParser::RuleListeparam);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    param();
    setState(149);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == subCParser::T__0) {
      setState(145);
      match(subCParser::T__0);
      setState(146);
      param();
      setState(151);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

subCParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

subCParser::TypeContext* subCParser::ParamContext::type() {
  return getRuleContext<subCParser::TypeContext>(0);
}
